--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/person
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/traindb_spring
 spring.datasource.username=Andrii
 spring.datasource.password=test
-
-
+spring.jpa.show-sql=true
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
