--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/traindb_spring
 spring.datasource.username=Andrii
 spring.datasource.password=test
 spring.jpa.show-sql=true
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+spring.mail.host =smtp.gmail.com
+spring.mail.username=testing.purposes.martishyn@gmail.com
+spring.mail.password=vdraxfvluawbexbs
+spring.mail.port =587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+
