--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/traindb_spring
 spring.datasource.username=Andrii
 spring.datasource.password=test
 spring.jpa.show-sql=true
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+org.springframework.transaction=TRACE
 
 spring.mail.host =smtp.gmail.com
 spring.mail.username=testing.purposes.martishyn@gmail.com
