Added order controller, added error page handler for custom pages, added views, added tests, added qr code generator, added pdf ticket creating, added README

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.datasource.username=Andrii
 spring.datasource.password=test
 spring.jpa.show-sql=true
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 org.springframework.transaction=TRACE
 
+#mail properties
 spring.mail.host =smtp.gmail.com
 spring.mail.username=testing.purposes.martishyn@gmail.com
 spring.mail.password=vdraxfvluawbexbs
@@ -15,5 +16,10 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.welcome.subject=Welcome to Local Railways
+
+#custom error handling
+server.error.whitelabel.enabled=false
+server.error.path=/error
+
 
 
